--- a/index.html
+++ b/index.html
@@ -11,12 +11,25 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- inizio header -->
     <header>
         <img src="img/Logo.png" alt="logo boolean" class="logo">
         <h1>Toboolist</h1>
     </header>
-
+    <!-- fine header -->
     <main>
+        <div class="container">
+            <!-- inizio bottoni -->
+            <div class="bottoni">
+                <button class="bottone-blu">Add Task</button>
+                <button class="bottone-bianco">Add Section</button>
+            </div>
+            <!-- fine bottoni -->
+            <!-- inizio prima sezione -->
+            <section></section>
+            <section></section>
+            <section></section>
+        </div>
 
     </main>
     
