--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
             </div>
             <!-- fine bottoni -->
             <!-- inizio prima sezione -->
-            <section></section>
+            <section>
+                <h2>&#9662; New Task</h2>
+                <ul>
+                    <li class="true blu">Quarterly Newsletter</li>
+                </ul>
+            </section>
+            <!-- fine prima sezione -->
             <section></section>
             <section></section>
         </div>
