--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@
                 </ul>
             </section>
             <!-- fine prima sezione -->
-            <section></section>
+            <!-- inizio seconda sezione -->
+            <section>
+                <h2>&#9662; Today</h2>
+                <ul>
+                    <li class="true blu">Recruiting blog post</li>
+                    <li class="true viola">Mobile app luaunch</li>
+                    <li class="false verdino">Interview John H.</li>
+                    <li class="true arancio">Summit update to mobile storefronts</li>
+                </ul>
+            </section>
+            <!-- fine seconda sezione -->
             <section></section>
         </div>
 
