--- a/index.html
+++ b/index.html
@@ -44,7 +44,17 @@
                 </ul>
             </section>
             <!-- fine seconda sezione -->
-            <section></section>
+            <!-- inizio terza sezione -->
+            <section>
+                <h2>&#9662; Upcoming</h2>
+                <ul>
+                    <li class="false">Schedule Meeting with Alex</li>
+                    <li class="true rosa">Homepage refresh</li>
+                    <li class="true verde">Onboard new Sales team members</li>
+                    <li class="true blu">Review editoriaal calendar</li>
+                </ul>
+            </section>
+            <!-- fine terza sezione -->
         </div>
 
     </main>
